# easyLinux

./: CMakeLists.txt  README.md  main.py  ter.py  test.py
include/easyLinux/: EasyLinux.h  MainFrame.h
src/: main.cpp
src/easyLinux/: EasyLinux.cpp  MainFrame.cpp
